# raw

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CTestCustom.cmake.in  README.md
cmake/: options.cmake  sanitize.cmake  system.cmake  toolchain-linux-amd64-clang.cmake  toolchain-linux-amd64-gcc.cmake  toolchain-linux-i386-clang.cmake  toolchain-linux-i386-gcc.cmake  toolchain-macos-amd64-clang.cmake  utils.cmake
src/: CMakeLists.txt  clipboard_impl.h  clipboard_impl_unix.cpp  clipboard_impl_win.cpp  config.cpp  config.h  convert.cpp  convert.h  convert_impl.cpp  convert_impl.h  convert_v2.cpp  convert_v2.h  converter.cpp  converter.h  file_io.cpp  file_io.h  format.cpp  format.h  format_impl.cpp  format_impl.h  formatter.cpp  formatter.h  input.cpp  input.h  input_adapter.cpp  input_adapter.h  log.cpp  log.h  main.cpp  output.cpp  output.h  output_adapter.cpp  output_adapter.h  parse.cpp  parse.h  print.cpp  print.h  stream_io.cpp  stream_io.h  stream_wrap.h  (+1 more)
src/test/: CMakeLists.txt
src/test/convert/: CMakeLists.txt  test_convert.cpp
src/test/integration/: CMakeLists.txt  test_integration.cpp
src/test/mock/: CMakeLists.txt  mock_format.cpp  mock_format.h  mock_input.cpp  mock_input.h  mock_output.cpp  mock_output.h
